Resolves: tdf#115351 convert boolean equivalent format codes to proper Boolean

Because Excel does not know a Boolean number format, BOOLEAN is
saved to Excel as

"TRUE";"TRUE";"FALSE"

with implicit conditions [>0] and [<0]. This when loaded has no
boolean property. Then saved to ODF it is loaded as

[>0]"TRUE";[<0]"TRUE";"FALSE"

with explicit conditions, which has identical meaning.

Convert both equivalent format codes to proper BOOLEAN when
reading. Locale dependent representations are treated the same,
e.g. "WAHR";"WAHR";"FALSCH"

Reviewed-on: https://gerrit.libreoffice.org/50642
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit ce4fc2fc08be8ea2773194e303ed42d2579e93a0)

Backported.

 Conflicts:
	svl/source/numbers/zforscan.cxx

Change-Id: I49383d71fce972fdd7ad9b19ce3bc150d02aba62